force-app/main/default/objects/Survey_Answer__c/fields/Choice_Checked__c.field-meta.xml
<CustomField>
    <fullName>Choice_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Choice Checked</label>
    <type>Checkbox</type>
</CustomField>