force-app/main/default/objects/Survey_Answer__c/fields/Choice_Value__c.field-meta.xml
<CustomField>
    <fullName>Choice_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Choice Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>