force-app/main/default/objects/Survey_Answer__c/fields/Survey_Choice__c.field-meta.xml
<CustomField>
    <fullName>Survey_Choice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Choice</label>
    <referenceTo>Survey_Choice__c</referenceTo>
    <relationshipName>Customer_Survey_Answer</relationshipName>
    <type>Lookup</type>
</CustomField>