force-app/main/default/objects/Survey_Answer__c/fields/Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Question</label>
    <referenceTo>Survey_Question__c</referenceTo>
    <relationshipName>Customer_Survey_Answer</relationshipName>
    <type>Lookup</type>
</CustomField>