force-app/main/default/objects/Survey_Answer__c/fields/Survey_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sheet__c</fullName>
    <label>Survey Sheet</label>
    <referenceTo>Survey_Sheet__c</referenceTo>
    <relationshipLabel>Survey Answer</relationshipLabel>
    <relationshipName>Survey_Answer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>